--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,8 @@
 /* make variables */
 :root {
   --lightgray: #D9D9D9;
-  --gray: #9c9c9c;
-  --orange: #f48915;
+  --gray: #0A1539;
+  --blue: #beefff;
   --darkGrey: #464D53;
   --caloryCard: #656565;
   --planCard: linear-gradient(210.41deg, #fa5042 1.14%, #ffa739 100.75%);
@@ -20,4 +20,11 @@
 }
 ::-webkit-scrollbar{
   display: none;
+}
+.stroke-text{
+  color: transparent;
+  font-family: Arial, Helvetica, sans-serif;
+  -webkit-text-stroke-width: 1px;
+  -webkit-text-stroke-color: white;
+
 }
