--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
 /* make variables */
 :root {
   --lightgray: #D9D9D9;
-  --gray: #0A1539;
+  --darkBlue: #0A1539;
   --blue: #beefff;
   --darkGrey: #464D53;
   --caloryCard: #656565;
@@ -27,4 +27,18 @@
   -webkit-text-stroke-width: 1px;
   -webkit-text-stroke-color: white;
 
+}
+
+.btn{
+  background-color: white;
+  padding: 0.5rem;
+  font-weight: bold;
+  border: 4px solid transparent;
+  transition: 300ms all;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.btn:hover{
+  cursor: pointer;
 }
