--- a/src/components/Programs/Programs.css
+++ b/src/components/Programs/Programs.css
@@ -15,3 +15,46 @@
     font-style: italic;
     text-transform: uppercase;
 }
+
+.program-categories{
+    display: flex;
+    gap: 1rem;
+}
+.category{
+    display: flex;
+    flex-direction: column;
+    background-color: gray;
+    padding: 2rem;
+    gap: 1rem;
+    color: black;
+    justify-content: space-between;
+
+}
+
+.category>:nth-child(1){
+    width: 2rem;
+    height: 2rem;
+    fill: black;
+
+}
+.category>:nth-child(2){
+    font-size: 1rem;
+    font-weight: bold;
+
+}
+.category>:nth-child(3){
+    font-size: 0.9rem;
+    line-height: 25px;
+}
+.join-now{
+    display: flex;
+    align-items: center;
+    gap: 2rem;
+}
+.join-now>img{
+    width: 1rem;
+
+}
+.category:hover{
+    background-color: var(--blue);
+}
