--- a/src/components/Reasons/Reasons.css
+++ b/src/components/Reasons/Reasons.css
@@ -50,5 +50,42 @@
     color: white;
     font-size: 3rem;
     font-weight: bold;
+
+}
+.details-r{
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+
+}
+.details-r>div{
+    display: flex;
+    font-size: 1rem;
+    gap: 1rem;
+}
+
+.details-r>div>img{
+    width: 2rem;
+    height: 2rem;
+}
+@media screen and (max-width: 768px){
+    .Reasons{
+        flex-direction: column;
+    }
+    .left-r>:nth-child(1){
+width: 7rem;
+height: 10rem;
+    }
+    .left-r>:nth-child(2){
+        width: 15rem;
+        height: 10rem;
+    }
+    .left-r>:nth-child(3){
+        width: 7rem;
+    }
+    .left-r>:nth-child(4){
+        width: 7rem;
+        height: 6rem;
+    }
     
 }
