--- a/src/components/Hero.css
+++ b/src/components/Hero.css
@@ -84,12 +84,12 @@
     font-weight: normal;
 }
 
-.hero-buttons>:nth-child(1){
+.hero-buttons>:nth-of-type(1){
     color: black;
     background-color: var(--blue);
     width: 8rem;
 }
-.hero-buttons>:nth-child(2){
+.hero-buttons>:nth-of-type(2){
     color: white;
     background-color: transparent;
     width: 8rem;
@@ -102,33 +102,7 @@
     top: 2rem;
     color: black;
 }
-
-.heart-rate{
-    display: flex;
-    flex-direction: column;
-    gap: 1rem;
-    background-color: var(--darkGrey);
-    width: fit-content;
-    padding: 1rem;
-    align-items: start;
-    border-radius: 5px;
-    position: absolute;
-    right: 4rem;
-    top: 7rem;
-
-}
-.heart-rate>img{
-    width: 2rem;
-}
-.heart-rate>span:nth-of-type(2){
-    color: var(--darkBlue);
-
-}
-.heart-rate>span:nth-of-type(3){
-    color: white;
-    font-size: 1.5rem;
-    
-}
+ 
 .hero-image{
     position: absolute;
     top: 10rem;
@@ -163,10 +137,56 @@
     flex-direction: column;
     justify-content: space-between;
 }
-.calories>div>:nth-child(1){
+.calories>div>:nth-of-type(1){
     color: var(--darkBlue);
 }
-.calories>div>:nth-child(2){
+.calories>div>:nth-of-type(2){
     color: white;
     font-size: 1.5rem;
+}
+@media screen and (max-width: 768px){
+    .hero{
+        flex-direction: column;
+    }
+    .the-best-ad{
+        margin-top: 0%;
+        font-size: small;
+        align-self: center;
+        transform: scale(0.8);
+    }
+    .hero-text{
+        font-size: xx-large;
+        align-items: center;
+        justify-content: center;
+    }
+    .hero-text>div:nth-of-type(3){
+        font-size: small;
+        font-weight: 200;
+        letter-spacing: 1px;
+        text-align: center;
+    }
+    .hero-buttons{
+        justify-content: center;
+    }
+    .figures>div>span:nth-of-type(1){
+        font-size: large;
+
+    }
+    .figures>div>span:nth-of-type(2){
+        font-size: large;
+        
+    }
+    .right-h{
+        position: relative;
+        background: none;
+    }
+    .hero-image{
+        position: relative;
+        width: 15rem;
+        left: 7rem;
+        top: 4rem;
+        align-self: center;
+    }
+    
+    
 }
