--- a/src/components/Programs/Programs.css
+++ b/src/components/Programs/Programs.css
@@ -59,3 +59,18 @@
     background-color: var(--blue);
     cursor: pointer;
 }
+
+@media screen and (max-width: 768px){
+    .programs-header{
+        flex-direction: column;
+        gap: 1rem;
+        font-size: x-large;
+        align-items: center;
+        justify-content: center;
+        margin-top: 2rem ;
+
+    }
+    .program-categories{
+        flex-direction: column;
+    }
+}
